--- a/Sln/OfficeEquipmentControl/OfficeEquipmentControl/Views/BihinKanri/Search.cshtml
+++ b/Sln/OfficeEquipmentControl/OfficeEquipmentControl/Views/BihinKanri/Search.cshtml
@@ -33,7 +33,6 @@
         <th>
             @Html.ActionLink("貸出返却日", "Search", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
-
         <th></th>
         <th></th>
         <th></th>
@@ -73,5 +72,5 @@
 <br />
 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
-@Html.PagedListPager(Model, page => Url.Action("Index",
+@Html.PagedListPager(Model, page => Url.Action("Search",
     new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
