--- a/Sln/OfficeEquipmentControl/OfficeEquipmentControl/Views/BihinKanri/Edit.cshtml
+++ b/Sln/OfficeEquipmentControl/OfficeEquipmentControl/Views/BihinKanri/Edit.cshtml
@@ -4,12 +4,13 @@
     ViewBag.Title = "備品状態変更";
 }
 
+<h2>状態変更 <small>Item Edit</small></h2>
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>備品状態変更 <small>Item Edit</small></h4>
         <p>@Html.DisplayFor(model => model.T_備品.品名)の状態を変更します。</p>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
