--- a/Sln/OfficeEquipmentControl/OfficeEquipmentControl/Views/Home/Index.cshtml
+++ b/Sln/OfficeEquipmentControl/OfficeEquipmentControl/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "備品管理Lite";
 }
 
 <div class="jumbotron">
@@ -8,5 +8,5 @@
     ASP.net MVC5を利用しているのでレイアウトはBootStrapで自由に変更できます。</p>
     自由に配布、改変可能</p>
     最新のバージョンはGitHubで
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">GitHub &raquo;</a></p>
+    <p><a href="https://github.com/s-tsurumaki" class="btn btn-primary btn-lg">Github &raquo;</a></p>
 </div>
